# SysOpy

./: .gitignore
lab1/: .gitignore  CMakeLists.txt  clear.c  library.c  library.h  main.c  mainDynamic.c  raport2.txt  raport3a.txt  raport3b.txt
lab2/: main.c  wyniki.txt
lab2/zad1/: CMakeLists.txt  main.c
lab2/zad2/: CMakeLists.txt  main.c  tmp.txt
lab3/zad1/: CMakeLists.txt  main.c
lab3/zad2/: main.c
lab3/zad3/: CMakeLists.txt  infinitiveLoop.c  main.c
lab4/: Opis
lab4/zad1/: endlessTime.sh  main.c
lab4/zad2/: main.c
lab4/zad3/: CMakeLists.txt  main.c
lab5/zad1/: main.c
lab5/zad2/: CMakeLists.txt  master.c  slave.c
lab6/zad1/: CMakeLists.txt  client.c  example.txt  server.c  shared.h
lab6/zad2/: CMakeLists.txt  client  client.c  example2.txt  server  server.c  shared.h
lab7/zad1/: CMakeLists.txt  barber.c  clients.c  shared.h
lab7/zad2/: CMakeLists.txt  barber.c  clients.c  shared.h
lab8/zad1/: CMakeLists.txt  clearTests.c  main.c
lab9/zad1/: CMakeLists.txt  PULP_FICTION.txt  conf.txt  main.c
lab9/zad2/: conf.txt  main.c
